# Dify2Discord

./: Cargo.toml  package-lock.json
src/: main.rs  voice.rs  web.rs
