[package]
name = "yachiyo_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
futures-util = "0.3"
lazy_static = "1.4"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
chrono = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
axum = "0.7"
axum-server = { version = "0.6", features = ["tls-rustls"] }
base64 = "0.22"
tower = { version = "0.5", features = ["util"] }